<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:id="@+id/layout_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/list_press"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/custom_list_logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/game_gta_5"
            android:scaleType="centerCrop"
            android:src="@drawable/action_gta5_square"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/custom_list_game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="top"
                android:maxLines="1"
                android:text="@string/gta_5"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:typeface="monospace"/>

            <TextView
                android:id="@+id/custom_list_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/rockstar_games"
                android:textColor="@color/text_color_gray"
                android:textSize="15sp"
                android:typeface="monospace"/>

            <TextView
                android:id="@+id/custom_list_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:maxLines="1"
                android:text="@string/september_17_2013"
                android:textColor="@color/text_color_gray"
                android:textSize="15sp"
                android:typeface="monospace"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/custom_list_rating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9_8"
                android:textColor="@color/text_color_black"
                android:textSize="17sp"
                android:typeface="monospace"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_genre"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/adventure_color"
            android:orientation="vertical"/>

    </LinearLayout>

</android.support.v7.widget.CardView>