<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/action_color"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context="com.choliy.igor.topgames.GameActivity">

    <ImageView
        android:id="@+id/game_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_hor"
        android:scaleType="centerCrop"
        android:src="@drawable/action_gta5_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/game_name"
            android:textColor="@color/text_color_gray"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_developer"
            android:textColor="@color/text_color_gray"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/game_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_release_date"
            android:textColor="@color/text_color_gray"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/game_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_rating"
            android:textColor="@color/text_color_gray"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/game_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_website"
            android:textColor="@color/text_color_gray"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/game_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_youtube"
            android:textColor="@color/text_color_gray"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/game_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/text_color_black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/text_color_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_color_white"
        android:padding="10dp">

        <TextView
            android:id="@+id/game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text_color_gray"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:typeface="monospace"/>

    </ScrollView>

</LinearLayout>